# kb-core

./: .gitignore  .npmignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json  vitest.config.ts
.github/workflows/: ci.yml  publish-npm.yml  publish.yml  release.yml
.specify/: feature.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
scripts/: download-model.js  publish-from-release.sh
specs/001-kb-core-recall-engine/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-kb-core-recall-engine/checklists/: requirements.md
specs/001-kb-core-recall-engine/contracts/: node-api.md  remote-parse-api.yaml
specs/002-fix-review-bugs/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-fix-review-bugs/checklists/: requirements.md
specs/002-fix-review-bugs/contracts/: api-status-types.md
src/: config.rs  lib.rs  lock.rs  tempfile.rs  thread_pool.rs
src/db/: migrations.rs  mod.rs  schema.rs
src/embed/: e5.rs  mod.rs
src/parse/: local.rs  mod.rs  remote.rs
src/pipeline/: embed.rs  mod.rs  parse.rs
src/search/: bm25.rs  meta.rs  mod.rs  rrf.rs  vector.rs
src/tantivy_idx/: mod.rs  schema.rs  writer.rs
tests/node/: add-and-search.test.ts  model-migration.test.ts  status.test.ts
tests/rust/: mod.rs  test_meta.rs  test_pipeline.rs  test_search.rs
